add notes on Fox and Rothenberg to model-notes

--- a/model-notes.tex
+++ b/model-notes.tex
@@ -59,7 +59,16 @@ We agreed to focus efforts for now on finding a base model to facilitate empiric
 				\begin{itemize}
 					\item Adds uncertainty to Groseclose/Snyder. What kind?
 				\end{itemize}
-			\item Justin Fox, Political Analysis (2011)
+			\item Justin Fox and Larry Rothenberg, ``Influence without Bribes: A Noncontracting Model of Campaign
+Giving and Policymaking,'' Political Analysis (2011)
+				\begin{itemize}
+					\item This is a model where no contracting is possible [someday I'd love to write a model that isn't perfect contracting or no contracting---but that shows how this quasi-enforcement that we end up with comes about, but I think we're better off with a contracting model for now]
+					\item Uncertainty is about the politician's policy preferences; there are two periods of policy choice with an election in between, and the interest group uses the first policy choice to learn about preferences before making campaign donation (PBE is soln. concept)
+					\item Politician's types are private info; drawn from independent density functions $f_i$ (incumbent) and $f_c$ (challenger)
+				  \item Election winner chooses preferred policy in second period
+					\item There is one interest group (they say results extend to more), and it never donates to more than one of the two politicians
+					\item There are only two politicians with unitary decision making depending on who's in office; this contrasts with our legislative data, so I think it would be hard to adapt to our context
+				\end{itemize}
 			\item A variant of Grossman and Helpman I've been working on
 		\end{enumerate}
 
