add notes on Dal Bo (2007)

--- a/model-notes.tex
+++ b/model-notes.tex
@@ -58,6 +58,18 @@ We agreed to focus efforts for now on finding a base model to facilitate empiric
 			\item Dal Bo, Bribing Voters
 				\begin{itemize}
 					\item Adds uncertainty to Groseclose/Snyder. What kind?
+					\item Pivotal bribes allow for costless influence
+						\begin{itemize}
+							\item Not clear how this could be reconciled to our data since there are almost always supermajorities; not clear how lobbies can implement pivotal bribecs
+						\end{itemize}
+					\item Assume commitment even though it's a one-shot game (footnote 11)
+					\item A more demanding majority rule raises the price of capture if offers are restricted, e.g. can't be fully contingent, such as on pivotality
+					\item Section on vote-related costs: leg. loses $\eta > 0$ if vote yet on bad project in addition to $\theta > 0$ if bad project passes
+					\item Extension: probability $p$ that each member is corruptible (I think this is the uncertainty that Sebastian was talking about). Then there is updating on moral type of all members if bad project passes and voting is secret
+						\begin{itemize}
+							\item For our purposes: I don't think we care that much ``how corruptible'' legislators are, not in a binary sense. Maybe, if we're getting really fancy, we care about how persuadable they are in a continuous sense, but I don't think we want to deal with the machinery of updating in a second stage of voting about whether to keep legislators in office or not
+						\end{itemize}
+					\item Dal Bo shows that political parties can facilitate cooperation among legislators to overcome prisoners dilemma/costless capture or at least set optimal price for capture
 				\end{itemize}
 			\item Justin Fox and Larry Rothenberg, ``Influence without Bribes: A Noncontracting Model of Campaign
 Giving and Policymaking,'' Political Analysis (2011)
