move Groseclose Snyder model description into new file GS-extension.tex

--- a/model-notes.tex
+++ b/model-notes.tex
@@ -54,7 +54,7 @@ We agreed to focus efforts for now on finding a base model to facilitate empiric
 			\item Groseclose $\&$ Snyder (1996)
 				\begin{itemize}
 					\item Perhaps add, as in Sebastian's book, that legislators are constrained by voters?
-					\item I think this is the most promising of the three (GS1996, Dal Bo, Fox and Rothenberg), so have devoted a separate section to it below
+					\item I think this is the most promising of the three (GS1996, Dal Bo, Fox and Rothenberg), so have created a separate document, GS-extension.tex
 				\end{itemize}
 			\item Dal Bo, Bribing Voters
 				\begin{itemize}
@@ -95,44 +95,5 @@ Questions
 	\item What kinds of results do we want to produce?
 \end{enumerate}
 
-\newpage
-Groseclose and Snyder (1996), ``Buying Supermajorities,'' APSR
-\begin{itemize}
-	\item For each legislator $i$, $v(i) = u_i(x) - u_i(s)$, measured in money; call this the reservation price of $i$
-		\begin{itemize}
-			\item WLOG, label legislators so that $v(i)$ is a non-increasing function 
-			\item Note legislators only have preferences over how they vote, not over which alternative wins
-		\end{itemize}
-	\item There are two vote buyers; each prefers to minimize total bribes paid while passing his preferred policy, but each would prefer to concede the issue rather than pay more than his WTP
-		\begin{itemize}
-			\item $A$ prefers $x$; $W_A$ is $A$'s willingness to pay (WTP) for $x$ measured in money
-			\item $B$ prefers $s$; $W_B$ is $B$'s WTP for $s$
-		\end{itemize}
-	\item Bribe offer functions: $a(i)$ and $b(i)$ are $A$ and $B$'s offers to $i$. Legislators take these bribe offers as given and then vote for the alternative that maximizes their payoff
-	\item A moves first; $a(i)$ perfectly observable to $B$ when he moves.
-	\item Goal: characterize SPNE in pure strategies
-		\begin{itemize}
-			\item Assume unbribed legislators who are indifferent vote for $s$; all bribed legislators who are indifferent vote for whoever bribed them last
-		\end{itemize}
-	\item Assume continuum of legislators on $\left[-\frac{1}{2},\frac{1}{2}\right]$
-	\item Assume $W_A$ large enough that $x$ wins in equilibrium (no uncertainty case)
-	\item $m + \frac{1}{2}$ is the fraction of legislators who vote for $x$, the new policy (as opposed to the status quo, $s$)
-	\item Prop 1: three types of equilibria in which $x$ wins; depend on size of $W_B$
-	\item Prop 2: $m^*$ (the optimal coalition size) is unique, and provides three cases parameterizing its size in terms of $W_B$, $v(-\frac{1}{2})$ and $v(m^*)$
-	\item Prop 3/4: special case where $v(z) = \alpha - \beta v$
-\end{itemize}
-
-\vskip.2in
-\begin{itemize}
-	\item I think, without uncertainty, you would estimate $m^*$ as a function of the parameters of $v$ and WTP
-		\begin{itemize}
-			\item It's useful that $m^*$ is unique. Not clear it would extend to case of uncertainty
-		\end{itemize}
-	\item I'm pretty sure all this predicts that $B$ should never pay anything.
-		\begin{itemize}
-			\item Uncertainty should reverse this, right?
-			\item What is uncertainty? I think just make $v(z)$ stochastic
-		\end{itemize}
-\end{itemize}
 
 \end{document}
