add possible objective function for maximization of winning probability under uncertainty (line 137)

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -133,6 +133,10 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 					\item They can easily both have positive probability of winning. But what do we need for this to be an equilibrium in this three stage game?
 					\item Uncertainty buys us a lot: no longer this knife edge condition of $A$ pushing to the point that $B$ buys no votes
 					\item Maybe it's a much simpler maximize probability of winning net of bribes?
+						\[
+							\max_{b(j)} \ \left\{ \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \mathbbm{1}\left[\alpha -\beta \cdot j + \ve_j + a(j) + b(j) \geq 0 \right] dj \right]\geq \frac{1}{2} \right\} - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj
+						\]
+
 				\end{itemize}
 		\end{itemize}	
 	\item Vote buyer A
