fixed typo in GS-extension

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -74,7 +74,7 @@ On Feb. 12, Sebastian and I agreed to focus efforts on finding a base model to f
 	\begin{itemize}
 		\item Prop 1: three types of equilibria in which $x$ wins; depend on size of $W_B$
 		\item Prop 2: $m^*$ (the optimal coalition size) is unique, and provides three cases parameterizing its size in terms of $W_B$, $v(-\frac{1}{2})$ and $v(m^*)$
-		\item Prop 3/4: special case where $v(z) = \alpha - \beta v$
+		\item Prop 3/4: special case where $v(z) = \alpha - \beta z$
 	\end{itemize}
 \end{itemize}
 
