--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -104,11 +104,14 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 \begin{enumerate}
 	\item Legislature
 		\begin{itemize}
-			\item Each legislator $z$ will decide whether to vote for $x$ or $s$ given $\ve_z$, $a(z)$ and $b(z)$. Votes for $x$ if
+			\item Each legislator $z$ will decide whether to vote for $x$ or $s$ given $z$, $a(z)$ and $b(z)$. Votes for $x$ if
 			  \[
-				  v(z) = \alpha -\beta \cdot z + \ve_z + a(z) + b(z) > 0
+				  v(z) = \alpha -\beta \cdot z + a(z) + b(z) > 0
 				\]
 				(whether the inequality is weak or strict depends on tie-breaking rules set out in the paper)
+					\begin{itemize}
+						\item Let's start out by thinking of $z$ as being a random variable distributed $N(z,\sigma_z)$
+					\end{itemize}
 			\item Payoff for vote buyer A if $x$ wins is $U_A(x) - \int_{-\frac{1}{2}}^\frac{1}{2} a(j) dj$
 			\item Payoff for vote buyer A if $s$ wins is $U_A(s) - \int_{-\frac{1}{2}}^\frac{1}{2} a(j) dj$
 			\item I think the cleanest way to write the condition for whether $x$ wins is
@@ -119,24 +122,52 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 	\item Vote buyer B
 		\begin{itemize}
 			\item GS assumption on vote buyers' objective is ``each prefers to minimize total bribes paid while passing his preferred policy, but each would prefer to concede the issue rather than pay more than his WTP''
-			\item This has to be adapted to passing his preferred policy in expectation? Do we do something like they each have $\frac{1}{2}$ probability of winning? (as long as WTP constraint is satisfied)
-			\item Groseclose and Snyder formulation would suggest something like
-				\[
-				  \min_{b(z)} \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \hskip.2in \text{subject to} \hskip.2in \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \leq U_B(s) - U_B(x)
-				\]
-				\[
-				\text{and however we write the ``while passing his preferred policy'' constraint}
-				\]
-		
-			\begin{itemize}
+			\item This has to be adapted to our situation with uncertainty
+				\begin{itemize}
+					\item Groseclose and Snyder formulation would suggest something like
+						\[
+							\min_{b(z)} \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \hskip.2in \text{subject to} \hskip.2in \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \leq U_B(s) - U_B(x)
+						\]
+						\[
+							\text{and however we write the ``while passing his preferred policy'' constraint}
+						\]
 					\item With asymmetric $v(z)$ or WTP parameters, it would be easy to get equilibria where only $A$ or $B$ buys votes. But we also have lots of outcomes where both buy votes.
 					\item They can easily both have positive probability of winning. But what do we need for this to be an equilibrium in this three stage game?
 					\item Uncertainty buys us a lot: no longer this knife edge condition of $A$ pushing to the point that $B$ buys no votes
-					\item Maybe it's a much simpler maximize probability of winning net of bribes?
-						\[
-							\max_{b(j)} \ \left\{ \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \mathbbm{1}\left[\alpha -\beta \cdot j + \ve_j + a(j) + b(j) \geq 0 \right] dj \right]\geq \frac{1}{2} \right\} - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj
-						\]
-
+				\end{itemize}
+			\item Let's start with the simple maximize expected value of winning (WTP times probability of winning) net of bribes:
+						\begin{multline}
+							\max_{b(j)} \ W_B\left\{ \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \mathbbm{1}\left[\alpha -\beta \cdot j + a(j) + b(j) \geq 0 \right] dj \right]\geq \frac{1}{2} \right\} - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \\
+							\text{subject to} \hskip.2in \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \leq W_B
+						\end{multline}
+				\begin{itemize}
+					\item Problem is that the indicator function will never equal 1 when $J \sim N(j,\sigma_j)$
+					\item So what's a reasonable objective function? 
+						\begin{itemize}
+							\item Maximizing the total probability mass where $v(j) \geq 0$?
+							  \begin{multline}
+									\max_{b(j)} \ W_B \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \Pr \left[\alpha -\beta \cdot j + a(j) + b(j) \geq 0 \right] dj \right] - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \\
+									\text{subject to} \hskip.2in \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj \leq W_B
+								\end{multline}
+							\item Suppressing the constraint for now and using the fact that $J \sim N(j,\sigma_j)$, this can be re-written as
+								\begin{equation}
+									\max_{b(j)} \ W_B \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \Pr \left[\frac{\alpha + a(j) + b(j)}{\beta} \geq j \right] dj \right] - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj
+								\end{equation}
+								or
+								\begin{equation}
+									\max_{b(j)} \ W_B \left[ \int_{-\frac{1}{2}}^\frac{1}{2} \Pr \left[\frac{\frac{\alpha + a(j) + b(j)}{\beta} - j}{\sigma_j} \geq z \right] dj \right] - \int_{-\frac{1}{2}}^\frac{1}{2} b(j) dj
+								\end{equation}
+								where $Z \sim N(0,1)$. \\
+							\item	So, this can be written as
+								\begin{equation}
+									\max_{b(j)} \ \int_{-\frac{1}{2}}^\frac{1}{2} \left[ W_B \cdot \Phi \left(\frac{\frac{\alpha + a(j) + b(j)}{\beta} - j}{\sigma_j} \right) - b(j) \right] dj
+								\end{equation}
+							\item If the realizations of $Z$ are i.i.d. and the bribes are independent across legislators, (I believe) this can be maximized pointwise.
+							\item The FOC for each $j$ is then
+								\begin{equation}
+								  W_B \cdot \frac{ \partial \Phi \left(\frac{\frac{\alpha + a(j) + b(j)}{\beta} - j}{\sigma_j} \right)}{\partial b(j)} = 1
+								\end{equation}
+						\end{itemize}
 				\end{itemize}
 		\end{itemize}	
 	\item Vote buyer A
