prep to add FOC analysis

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -177,14 +177,19 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 							\item The FOC for each $j$ is then
 								\begin{equation}
 								  - W_B \cdot \frac{ \partial \Phi \left(\frac{\frac{\alpha + a(j) - b(j)}{\beta} - j}{\sigma_j} \right)}{\partial b(j)} = 1
+									\label{eq:foc}
 								\end{equation}
 								as long as the constraint is satisfied.
 									\begin{itemize}
 										\item I don't know how decisions are made if the constraint binds---how the rationing happens
-										\item If the constraint is not binding, vote buyer B will pay every single legislator (we could put in some kind of fixed cost of dealing with each legislator to short circuit this outcome)
-										\item Perhaps there's something in equilibrium I'm not seeing yet that will reduce the number of legislators that are paid
+										\item If the constraint is not binding, vote buyer B will pay all legislators (we could put in some kind of fixed cost of dealing with each legislator to short circuit this outcome) except those who are already so favorable to him that they are past the FOC point
+										\item Perhaps there's something in equilibrium I'm not seeing yet that will reduce further the number of legislators that are paid
 									\end{itemize}
 						\end{itemize}
+				\end{itemize}
+			\item Let's examine the FOC, assuming pointwise maximization is okay as in Equation~\ref{eq:foc}
+				\begin{itemize}
+					\item 
 				\end{itemize}
 		\end{itemize}	
 	\item Vote buyer A
