work out FOC for vote buyer B in terms of PDF

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -189,7 +189,15 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 				\end{itemize}
 			\item Let's examine the FOC, assuming pointwise maximization is okay as in Equation~\ref{eq:foc}
 				\begin{itemize}
-					\item 
+					\item It's easier for me to think of the CDF in terms of the non-standardized Normal distribution before taking the derivative. Then, if my math is right, the FOC becomes
+						\begin{equation}
+							  \frac{1}{\beta}\frac{1}{\sigma_j \sqrt{2\pi}} \: e^{- \frac{\left(\frac{\alpha + a(j) - b(j)}{\beta} - j\right)^2}{2\sigma_j^2} }= \frac{1}{W_B} 
+						\end{equation}
+							\begin{itemize}
+								\item This just says the pdf has to equal $\beta$ divided by the willingness to pay
+							\end{itemize}
+					\item How do we deal with this r.v. with continuous support when the range of ideal points is posited to be finite ($[-\frac{1}{2},\frac{1}{2}]$)?
+
 				\end{itemize}
 		\end{itemize}	
 	\item Vote buyer A
