--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -204,18 +204,28 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 									\end{equation}
 								Since the log statement on the RHS will almost certainly be negative, I can take the negative sign to the right and take the square root without worrying about imaginary numbers
 								  \begin{equation}
-							  		\frac{\alpha + a(j) - b(j)}{\beta} - j = \sqrt{-2\sigma_j^2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)}
+							  		\frac{\alpha + a(j) - b(j)}{\beta} - j = \pm \sqrt{-2\sigma_j^2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)}
+									\end{equation}
+										\begin{itemize}
+											\item Notice there are two roots: could be to the left of the mode (less than 0.5 cumulative probability), or to the right (more than 0.5 cumulative probability)
+										\end{itemize}
+									\begin{equation}
+							  		\alpha + a(j) - b(j) = \pm \beta\sigma_j \sqrt{-2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)} + j \beta
 									\end{equation}
 									\begin{equation}
-							  		\alpha + a(j) - b(j) = \beta\sigma_j \sqrt{-2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)} + j \beta
+							  		b(j) = \alpha + a(j)  - j \beta \pm \beta\sigma_j \sqrt{-2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)}
 									\end{equation}
 									\begin{equation}
-							  		b(j) = \alpha + a(j)  - j \beta - \beta\sigma_j \sqrt{-2 \ln\left(\frac{\beta\sigma_j \sqrt{2\pi}}{W_B} \right)}
+							  		b(j) = \alpha + a(j)  - \beta j \pm \beta\sigma_j \sqrt{2 \left(\ln W_B - \ln \beta\sigma_j - \ln \sqrt{2\pi} \right)}
 									\end{equation}
-									\begin{equation}
-							  		b(j) = \alpha + a(j)  - \beta j - \beta\sigma_j \sqrt{2 \left(\ln W_B - \ln \beta\sigma_j - \ln \sqrt{2\pi} \right)}
-									\end{equation}
-								\item This mostly make sense, except that $b(j)$ would be decreasing in $W_B$
+								\item So, the bribe for legislator $j$ takes legislator j's preferences back to zero in expectation (the first three terms) and then relative to that, either adds or subtracts a term that involves WTP, variance and $\beta$
+									\begin{itemize}
+										\item Do we have a way of distinguishing between the two? They have very different implications for the CDF, even though the same implications for the pdf
+										\item It makes more intuitive sense that the bribe would be increasing in $W_B$ (WTP)
+										\item Perhaps we derive the different implications and let the data speak
+										\item All the comparative statics will come out with same magnitude, both signs
+										\item SOC is obviously okay (essentially $-x e^{\frac{x^2}{2}}$)
+									\end{itemize}
 							\end{itemize}
 					\item How do we deal with this r.v. with continuous support when the range of ideal points is posited to be finite ($[-\frac{1}{2},\frac{1}{2}]$)?
 
